--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,5 @@
-PORT=3000
-HOST=127.0.0.1
+NODE_VERSION=18.17.1
+PORT=10000
+HOST=0.0.0.0
 DATABASE_NAME=prueba
-DATABASE_URL=mongodb+srv://sergioBD2024:4c2cY2zUguTaDcY5@cluster0.jcxgtwi.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://martyngnr666:Marzo2024@cluster0.fjiwxd7.mongodb.net/?retryWrites=true&w=majority
