--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
 PORT=3000
 HOST=127.0.0.1
 DATABASE_NAME=prueba
-DATABASE_URL=mongodb+srv://sergioBD2024:4c2cY2zUguTaDcY5@cluster0.jcxgtwi.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=http://127.0.0.1:3000
