--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "express": "^4.18.3",
         "joi": "^17.12.2",
         "mongodb": "^6.5.0",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.13"
     },
     "devDependencies": {
         "eslint": "^8.57.0"
